/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.k2600143.slms.command;

/**
 *
 * @author arunagamage
 */
public interface K2600143_Command {
    void execute();
    void undo();
}
