/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.k2600143.slms.enums;

/**
 *
 * @author arunagamage
 */
public enum K2600143_NotificationType {
    DUE_DATE, OVERDUE, RESERVATION_AVAILABLE
}
